fully responsive, About not aligning correct

--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,8 @@ table {
 html, body {
     /* width: 800px; */  /* this messed up my responsive */
     /* margin: 0 auto; */
+    max-width: 880px;
+    margin: 0 auto;
     font-family: 'Titillium Web', sans-serif;
     font-size: 62.5%;
 }
@@ -78,12 +80,14 @@ h1, h2, h3, h4, h5 {
 .top-header {
     border: 1px solid red;
     display: flex;
-    justify-content: space-between;
-    margin-top: 35px;
+    justify-content: space-evenly;
+    margin-top: 4%;
     align-items: center;   /* align-content does NOT work with single row of elements */
 }
 nav {
-    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
     border: 2px solid royalblue;
 }
 
@@ -116,11 +120,12 @@ header nav a:last-child {
 /* cta */
 
 .cta  {
+    width: 88%;
     border: 4px solid blueviolet;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     font-size: 6.5rem;
-    margin-top: 5%;
+
 }
 
 .cta .cta-text {
@@ -134,8 +139,9 @@ header nav a:last-child {
 .cta .cta-text h1 {
     border: 1px solid green;
     box-sizing: border-box;
-    width: 55%;
+    width: 45%;
     text-align: center;
+    font-size: 5.5rem;
 }
 
 
@@ -160,8 +166,8 @@ header nav a:last-child {
 }
 
 .main-content {
-    border-top: 6px solid black;
-    border-bottom: 6px solid black;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     background-color: lightblue;
     padding: 2% 0;
 }
@@ -169,21 +175,20 @@ header nav a:last-child {
 .main-content .top-content {
     border: 6px solid firebrick;
     display: flex;
-
 }
 
 .main-content .top-content .text-content {
     border: 1px solid darkblue;
-    width: 50%;
-
+    width: 80%;
+    font-size: 2rem;
 }
 
-.main-content .top-content .text-content:last-child {
-    margin-left: 5%;
+.main-content .top-content .text-content:first-child {
+     margin-right: 1%;
 }
 
 .main-content .middle-img {
-    width: 800px;
+    width: 100%;
     padding: 2% 0;
 }
 
@@ -195,6 +200,7 @@ header nav a:last-child {
 .main-content .bottom-content .text-content {
     border: 1px solid darkblue;
     width: 30%;
+    font-size: 2rem;
 }
 
 .main-content .bottom-content .text-content:nth-child(1), .text-content:nth-child(2) {
@@ -218,11 +224,12 @@ footer {
 @media  (max-width: 800px) {
     .container {
         background-color: pink;
-        margin: 0 auto;
-
+        width: 100%;
+        padding: 0 2rem;
     }
 
     .top-header {
+        border: 1px solid green;
         display: flex;
         flex-direction: column-reverse;
     }
@@ -244,7 +251,6 @@ footer {
     }
 
     .tablet-size::after {
-        content: 'tablet';
         font-size: 4rem;
     }
 }
@@ -254,18 +260,19 @@ footer {
     .container {
         background: lightblue;
         width: 100%;
+        padding: 0 2rem;
     }
     .top-header {
         display: flex;
         flex-direction: column-reverse;
         justify-content: space-evenly;
-        width: 500px;
+        width: 100%;
     }
     .cta{
         display: flex;
         flex-direction: column-reverse;
         justify-content: space-evenly;
-        width: 500px;
+        width: 100%;
     }
     nav {
         display: flex;
@@ -277,37 +284,30 @@ footer {
         display: none;
     }
     .top-content, .bottom-content {
-        border: 2px solid blue;
         display: flex;
         flex-direction: column;
-
     }
 
     .main-content .top-content, .bottom-content {
         border: 6px solid firebrick;
         display: flex;
-        width: 450px;
+        width: 100%;
     }
 
     .middle-img{
-        width: 500px;
+        width: 100%;
     }
 
     .main-content .bottom-content .text-content {
         border: 1px solid darkblue;
-        width: 440px;
+        width: 100%;
         padding: 0;
     }
 
     .main-content .top-content .text-content {
         border: 1px solid darkblue;
-        width: 440px;
+        width: 100%;
         padding: 0;
     }
-
-    .text-content {
-
-    }
-
 
 }
